# VelesDB

./: .bandit  .clippy.toml  .codacy.yml  .env.example  .gitignore  .gitleaksignore  .mailmap  .semgrepignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  QUALITY_BAR.md  README.md  ROADMAP.md  SECURITY.md  bench_hnsw_results.txt  bench_max_perf.txt  bench_simd_results.txt  benchmark_results.txt  benchmark_results_full.txt  deny.toml  docker-compose.yml  glama.json  package-lock.json  rust-toolchain.toml  server.json  smithery.yaml  sonar-project.properties
crates/velesdb-core/: Cargo.toml  README.md  bench_i9_full.txt  bench_simd.txt  bench_simd_full.txt
crates/velesdb-core/benches/: agent_memory_benchmark.rs  aggregation_benchmark.rs  avx512_comparison_i9.rs  bitmap_prefilter_benchmark.rs  bm25_benchmark.rs  bulk_insert_v2_benchmark.rs  capture_sift1m_fingerprints.rs  column_filter_benchmark.rs  diagnose_simd.rs  dual_precision_benchmark.rs  gpu_benchmark.rs  gpu_rtx4090.rs  gpu_traversal_benchmark.rs  graph_traversal_v2.rs  hnsw_benchmark.rs  hnsw_comparison_benchmark.rs  hnsw_tuning.rs  i9_14900k_benchmark.rs  import_benchmark.rs  near_fused_bench.rs  orderby_similarity_benchmark.rs  overhead_benchmark.rs  parallel_benchmark.rs  perf_benchmark.rs  portable_simd_eval.rs  pq_hnsw_benchmark.rs  pq_recall_benchmark.rs  pq_recall_multidist.rs  prefetch_tuning_benchmark.rs  property_index_benchmark.rs  quantization_benchmark.rs  recall_benchmark.rs  recall_comprehensive.rs  recall_perf_validation.rs  recall_where_scaling_benchmark.rs  scalability_benchmark.rs  search_benchmark.rs  sift1m_recall.rs  simd_benchmark.rs  similarity_benchmark.rs  (+6 more)
crates/velesdb-core/examples/: crash_driver.rs  profile_batch_insert.rs  simd_precision_check.rs
crates/velesdb-core/src/: alloc_guard.rs  alloc_guard_tests.rs  collection.rs  column_store.rs  column_store_tests.rs  config.rs  config_quantization.rs  config_tests.rs  config_validation.rs  contiguous_ops.rs  contiguous_resize.rs  database.rs  database_query_tests.rs  distance.rs  distance_tests.rs  error.rs  error_tests.rs  fault_injection.rs  gpu.rs  gpu_tests.rs  guardrails.rs  half_precision.rs  half_precision_tests.rs  index.rs  internal_bench.rs  internal_bench_tests.rs  lib.rs  lock_rank.rs  lock_rank_tests.rs  metrics.rs  metrics_tests.rs  perf_optimizations.rs  perf_optimizations_tests.rs  point.rs  point_tests.rs  quantization.rs  quantization_tests.rs  simd.rs  simd_avx512.rs  simd_dispatch.rs  (+15 more)
crates/velesdb-core/tests/: auto_reindex_bdd.rs  bdd.rs  bitmap_prefilter_integration.rs  bulk_insert_v2_integration.rs  concurrency_lock_order.rs  coverage_ordered_index_scan_branches.rs  crud_dedup_parity_tests.rs  deferred_indexer_integration.rs  e2e_compound.rs  e2e_join.rs  epic_features_integration_tests.rs  histogram_selectivity_bdd.rs  hnsw_dedup_parity_tests.rs  hybrid_credibility_tests.rs  integration_scenarios.rs  internal_bench_feature_tests.rs  loom_tests.rs  match_prefilter_e2e_tests.rs  match_similarity_dimension_guard.rs  match_where_alias_property.rs  no_hnsw_delta_wal_guard.rs  numeric_casts.rs  ordered_index_advisor.rs  ordered_index_multikey.rs  ordered_index_order_by_equivalence.rs  phase6_integration.rs  phase7_integration.rs  pq_adc_e2e_tests.rs  property_index_e2e_tests.rs  public_api_reachability.rs  public_facade_tests.rs  pushdown_join_e2e_tests.rs  read_gate_baseline_equivalence.rs  read_gate_deny_semantics.rs  read_gate_hook_firing.rs  read_gate_recall_regression.rs  read_gate_scope_composition.rs  recall_validation.rs  scalar_order_by_limit_integration.rs  scale_recall_100k.rs  (+15 more)
crates/velesdb-memory/: ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  Cargo.toml  POSITIONING.md  README.md
crates/velesdb-memory/benches/: context_compiler_benchmark.rs
crates/velesdb-memory/examples/: bench_multihop.rs  wow_offline.rs
crates/velesdb-memory/media/: wow.tape
crates/velesdb-memory/src/: clock.rs  clock_tests.rs  context.rs  dated_context.rs  dated_context_tests.rs  embedder.rs  error.rs  extract.rs  fused_recall.rs  fusion.rs  fusion_tests.rs  http.rs  id.rs  lib.rs  limits.rs  main.rs  mcp.rs  model.rs  model_tests.rs  reinforce.rs  rerank.rs  schema.rs  schema_tests.rs  service.rs  storage.rs  storage_tests.rs  tls.rs
crates/velesdb-memory/tests/: auto_date_bdd.rs  cli_flags.rs  columnstore_bdd.rs  context_compiler_bdd.rs  context_memory_bdd.rs  context_pins_bdd.rs  context_property_bdd.rs  extract_bdd.rs  http_insecure_process.rs  http_lock_contention.rs  http_tls.rs  http_transport.rs  mcp_lifecycle.rs  memory_service_bdd.rs  metadata_caps_bdd.rs  recall_fused_bdd.rs  reinforce_persistence.rs  tokio_blocking_lock_contention_repro.rs  ttl_bdd.rs  why_bdd.rs
crates/velesdb-migrate/: Cargo.toml  README.md  TESTING.md
crates/velesdb-migrate/benches/: migration_benchmark.rs
crates/velesdb-migrate/examples/: chromadb-migration.yaml  milvus-migration.yaml  pgvector-migration.yaml  pinecone-migration.yaml  qdrant-migration.yaml  supabase-migration.yaml  weaviate-migration.yaml
crates/velesdb-migrate/scripts/: load-env.ps1  test-with-real-data.ps1
crates/velesdb-node/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json
crates/velesdb-premium/: Cargo.toml
crates/velesdb-python/: Cargo.toml  README.md  pyproject.toml
demos/rag-pdf-demo/: README.md  TROUBLESHOOTING.md  benchmark_layers.py  pyproject.toml  test_document.txt
examples/agent_memory/: Cargo.toml  README.md  agent_loop.py  agent_memory.ts  memory_builds_its_own_graph.py  memory_builds_its_own_graph.tape  snapshot_ttl.rs  wedge_quickstart.py  why_across_sessions.py  why_across_sessions.tape  why_magic_constant.py  why_magic_constant.tape
examples/ecommerce_recommendation/: Cargo.toml  README.md
integrations/common/: README.md  pyproject.toml
integrations/haystack/: LICENSE  README.md  pyproject.toml
integrations/langchain/: README.md  pyproject.toml
integrations/langgraph/: README.md  pyproject.toml
(+2050 files in other folders)
