[package]
name = "velesdb-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "VelesDB-memory: local-first MCP memory server for AI agents (remember/recall/relate/forget/why)."

[dependencies]
velesdb-core = { workspace = true, features = ["persistence"] }
thiserror = { workspace = true }
rmcp = { version = "1.8.0", features = ["server", "macros", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Pinned to rmcp's schemars (1.2.x) so domain types and MCP DTOs share one
# JsonSchema derive — no duplicate wire/domain structs.
schemars = "1"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "velesdb-memory"
path = "src/main.rs"

[lib]
name = "velesdb_memory"
path = "src/lib.rs"

[lints]
workspace = true
