[package]
name = "velesdb-memory"
# Independent of the workspace version: velesdb-memory is a young MCP wrapper
# with its own release cadence, decoupled from the core engine's 3.x line.
version = "0.10.1"
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "VelesDB-memory: local-first MCP memory server for AI agents (remember/recall/relate/forget/why + deterministic context compiler)."
readme = "README.md"
keywords = ["mcp", "agent-memory", "local-first", "knowledge-graph", "ai"]
categories = ["database", "command-line-utilities"]
# The demo gif is served from the repo via raw.githubusercontent in the README;
# shipping it in the .crate would only add dead weight to every download.
exclude = ["media/"]

[dependencies]
# `persistence` is NOT requested unconditionally here — see the `persistence`
# feature below. A hardcoded `features = ["persistence"]` would force it on
# for every consumer (Cargo unions requested features workspace-wide), even
# one like velesdb-wasm that explicitly disables it to stay off tokio/mio.
velesdb-core = { workspace = true, default-features = false }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Pinned to rmcp's schemars (1.2.x) so domain types and MCP DTOs share one
# JsonSchema derive — no duplicate wire/domain structs.
schemars = "1"
# The MCP server stack — optional, behind the (default) `mcp` feature. Library
# consumers (e.g. the language bindings) build with `default-features = false`
# to get the memory core without the `rmcp`/`tokio` server dependencies.
rmcp = { version = "2.0.0", features = ["server", "macros", "transport-io"], optional = true }
tokio = { workspace = true, optional = true }
# Optional real-recall backend (off by default). HTTP-only to a local Ollama;
# `default-features = false` drops TLS to keep the binary small.
ureq = { version = "2", optional = true, default-features = false }

[features]
# The MCP server transport + binary, and the native file-backed store, are on
# by default so `cargo build` produces the server; library consumers disable
# defaults to pick only what they need.
default = ["mcp", "persistence", "context"]
mcp = ["dep:rmcp", "dep:tokio", "persistence"]
# The deterministic context compiler (EPIC-P-070). Zero new dependencies and
# `persistence`-free by design, so a wasm-style `default-features = false`
# consumer can enable it alone; the memory-backed selection layer inside it is
# additionally gated on `persistence`.
context = []
# NativeStore, the file-backed MemoryStore (velesdb-core's Database/AgentMemory
# — tokio/mio/memmap2). On by default; a backend with its own MemoryStore impl
# (e.g. velesdb-wasm's in-memory one) builds with `default-features = false`
# and omits this, so those heavy deps never enter its dependency graph.
persistence = ["velesdb-core/persistence"]
# Real on-device semantic recall via a local Ollama embeddings endpoint. Off by
# default so the shipped binary stays tiny, zero-dependency, and fully offline.
ollama = ["dep:ureq"]
# Batteries-included text → facts+entities extraction (OllamaExtractor) so the
# fact↔entity graph self-builds. Off by default: the Extractor trait is always
# available for bring-your-own-LLM; only this local backend pulls the HTTP dep.
extract = ["dep:ureq"]

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }
# MCP client-side streamable-HTTP transport, dev-only: drives the `http`
# feature's server transport in tests/http_transport.rs with a real client
# (the same one exercised by rmcp's own upstream test suite) rather than
# hand-rolled JSON-RPC-over-HTTP requests.
rmcp = { version = "2.0.0", features = ["client", "transport-streamable-http-client-reqwest"] }

[[bin]]
name = "velesdb-memory"
path = "src/main.rs"
# The binary is the MCP server, so it only builds with the `mcp` feature.
required-features = ["mcp"]

# Latency of the deterministic context compiler's `compile()` pipeline
# across fragment counts, budgets, and content shapes — see BENCHMARK.md.
[[bench]]
name = "context_compiler_benchmark"
harness = false
required-features = ["context"]

# Reproducible before/after benchmark of the deterministic context compiler.
# Offline and dependency-free — needs only the `context` feature.
[[example]]
name = "context_savings"
path = "examples/context_savings/main.rs"
required-features = ["context"]

# Real-data LoCoMo benchmark. Needs a local Ollama (all-minilm + a generative
# model), so it only builds with the `ollama` feature.
[[example]]
name = "locomo"
path = "examples/locomo/main.rs"
required-features = ["ollama"]

[lib]
name = "velesdb_memory"
path = "src/lib.rs"

[lints]
workspace = true

# Round-trips real MCP calls (initialize/remember/recall) plus a 20-way
# concurrency stress test over the streamable-HTTP transport built by the
# `http` feature (router only — no subprocess). Needs the dev-dependency
# rmcp client transport above, so it only builds under that feature.
[[test]]
name = "http_transport"
path = "tests/http_transport.rs"
required-features = ["http"]

[[example]]
name = "multihop"
path = "examples/multihop/main.rs"
required-features = ["ollama"]

[[example]]
name = "colfilter"
path = "examples/colfilter/main.rs"
required-features = ["ollama"]

[[example]]
name = "timeqa"
path = "examples/timeqa/main.rs"
required-features = ["ollama"]

[[example]]
name = "triengine"
path = "examples/triengine/main.rs"
required-features = ["ollama"]
