[package]
name = "velesdb-memory"
# Independent of the workspace version: velesdb-memory is a young MCP wrapper
# with its own release cadence, decoupled from the core engine's 3.x line.
version = "0.11.1"
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "VelesDB-memory: local-first MCP memory server for AI agents (remember/recall/relate/forget/why + deterministic context compiler)."
readme = "README.md"
keywords = ["mcp", "agent-memory", "local-first", "knowledge-graph", "ai"]
categories = ["database", "command-line-utilities"]
# The demo gif is served from the repo via raw.githubusercontent in the README;
# shipping it in the .crate would only add dead weight to every download.
exclude = ["media/"]

[dependencies]
# `persistence` is NOT requested unconditionally here — see the `persistence`
# feature below. A hardcoded `features = ["persistence"]` would force it on
# for every consumer (Cargo unions requested features workspace-wide), even
# one like velesdb-wasm that explicitly disables it to stay off tokio/mio.
velesdb-core = { workspace = true, default-features = false }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Pinned to rmcp's schemars (1.2.x) so domain types and MCP DTOs share one
# JsonSchema derive — no duplicate wire/domain structs.
schemars = "1"
# The MCP server stack — optional, behind the (default) `mcp` feature. Library
# consumers (e.g. the language bindings) build with `default-features = false`
# to get the memory core without the `rmcp`/`tokio` server dependencies.
rmcp = { version = "2.0.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server"], optional = true }
tokio = { workspace = true, optional = true }
# Optional real-recall backend (off by default). HTTP-only to a local Ollama;
# `default-features = false` drops TLS to keep the binary small.
ureq = { version = "2", optional = true, default-features = false }
# HTTP transport (multi-client daemon), behind the `http` feature only — the
# default binary stays offline/stdio-only. `axum`/`tower` are already
# workspace dependencies (velesdb-server); `tokio-util` provides the
# `CancellationToken` used to drive graceful shutdown of the HTTP listener.
axum = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
# Bounds the /mcp request body: rmcp's StreamableHttpService reads the body
# directly via `Body::collect` (see `expect_json` in rmcp's
# `transport::common::server_side_http`), bypassing axum's own `Bytes`/`Json`
# extractor-based `DefaultBodyLimit` entirely — that middleware only patches
# what those specific extractors read, so it is a no-op for a raw
# `nest_service` tower::Service like this one. `RequestBodyLimitLayer`
# instead wraps the actual `http_body::Body` (`http_body_util::Limited`)
# before it reaches the inner service, so it works regardless of how the
# body is consumed downstream.
tower-http = { workspace = true, optional = true, features = ["limit"] }
# `futures::Stream`, the bound `rmcp::SessionManager`'s streaming methods
# return — needed to forward them from `BoundedSessionManager` (src/http/
# session_limit.rs) to the wrapped `LocalSessionManager`.
futures = { version = "0.3", optional = true }
# Native (no shelled-out mkcert/openssl) local CA + leaf certificate
# generation for HTTPS-by-default (see `src/tls.rs`). `x509-parser` is needed
# for `Issuer::from_ca_cert_pem` — reloading a CA already persisted to disk
# without regenerating it (see the module docs for why that matters: clients
# only need to trust the CA ONCE). Default features (`crypto`, `pem`,
# `ring`) already cover key generation/PEM (de)serialization.
rcgen = { version = "0.14", optional = true, features = ["x509-parser"] }
# `CertificateParams::not_before`/`not_after` are `time::OffsetDateTime` —
# rcgen's own public field type, not re-exported, so constructing "now" and
# "now + N days" needs `time` directly. Version pinned to match rcgen's own
# `^0.3.6` requirement.
time = { version = "0.3", optional = true }
# TLS termination for the HTTP transport — same stack `velesdb-server`
# already uses (`src/tls.rs` there), reused here rather than adding
# `axum-server` as a second, independent TLS dependency (see `src/tls.rs`'s
# module docs for the full rationale). `ring` matches `velesdb-server`'s
# choice, kept explicit (rather than relying on a process-wide default
# `CryptoProvider`) since the `reqwest` dev-dependency below links a
# different backend (`aws-lc-rs`) into the very same test binaries.
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
# Manual TLS accept loop: `axum::serve` has no listener abstraction for a
# pre-handshake `TlsAcceptor`, so an accepted TLS connection is served
# through `hyper`'s own connection builder instead (identical to
# `velesdb-server`'s `spawn_tls_connection`).
hyper = { version = "1", optional = true }
hyper-util = { version = "0.1", optional = true, features = ["tokio", "server-auto"] }
# `tower::ServiceExt::oneshot` drives the axum `Router` (a `tower::Service`)
# for a single request inside the manual TLS accept loop.
tower = { workspace = true, optional = true }

[features]
# The MCP server transport + binary, and the native file-backed store, are on
# by default so `cargo build` produces the server; library consumers disable
# defaults to pick only what they need.
default = ["mcp", "persistence", "context"]
mcp = ["dep:rmcp", "dep:tokio", "persistence"]
# Streamable-HTTP transport (multi-client daemon mode, see the README's "HTTP
# transport" section): lets several MCP clients share ONE `velesdb-memory`
# process instead of each spawning its own stdio process and fighting over
# the store's single-writer flock. Off by default so `cargo install
# velesdb-memory` still produces the tiny, fully-offline stdio-only binary —
# only the installer script opts a LOCAL build into this at build time; the
# hash/ollama embedder choice stays a pure runtime switch either way.
http = [
    "mcp",
    "dep:axum",
    "dep:tokio-util",
    "dep:tower-http",
    "dep:futures",
    "dep:rcgen",
    "dep:time",
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pemfile",
    "dep:hyper",
    "dep:hyper-util",
    "dep:tower",
    "rmcp/transport-streamable-http-server",
]
# The deterministic context compiler (EPIC-P-070). Zero new dependencies and
# `persistence`-free by design, so a wasm-style `default-features = false`
# consumer can enable it alone; the memory-backed selection layer inside it is
# additionally gated on `persistence`.
context = []
# NativeStore, the file-backed MemoryStore (velesdb-core's Database/AgentMemory
# — tokio/mio/memmap2). On by default; a backend with its own MemoryStore impl
# (e.g. velesdb-wasm's in-memory one) builds with `default-features = false`
# and omits this, so those heavy deps never enter its dependency graph.
persistence = ["velesdb-core/persistence"]
# Real on-device semantic recall via a local Ollama embeddings endpoint. Off by
# default so the shipped binary stays tiny, zero-dependency, and fully offline.
ollama = ["dep:ureq"]
# Batteries-included text → facts+entities extraction (OllamaExtractor) so the
# fact↔entity graph self-builds. Off by default: the Extractor trait is always
# available for bring-your-own-LLM; only this local backend pulls the HTTP dep.
extract = ["dep:ureq"]

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }
# MCP client-side streamable-HTTP transport, dev-only: drives the `http`
# feature's server transport in tests/http_transport.rs with a real client
# (the same one exercised by rmcp's own upstream test suite) rather than
# hand-rolled JSON-RPC-over-HTTP requests. `reqwest` additionally turns on
# rmcp's own `reqwest?/rustls` alias so the `reqwest::Client` it hands back
# has a TLS backend at all — needed by tests/http_tls.rs, which builds its
# OWN `reqwest::Client`s (one trusting nothing extra, one trusting the
# generated local CA via `add_root_certificate`) and hands them to
# `StreamableHttpClientTransport::with_client` for the RED/GREEN proof.
rmcp = { version = "2.0.0", features = ["client", "transport-streamable-http-client-reqwest", "reqwest"] }
# Same crate + version rmcp's reqwest transport resolves to (Cargo unifies
# the two into one compiled `reqwest`), named directly here so
# tests/http_tls.rs can construct `reqwest::Client`/`reqwest::Certificate`
# itself rather than only via rmcp's convenience constructors. `blocking` is
# for tests/http_insecure_process.rs's synchronous polling of a spawned
# subprocess (that test is plain `#[test]`, not `#[tokio::test]`).
reqwest = { version = "0.13", features = ["blocking"] }

[[bin]]
name = "velesdb-memory"
path = "src/main.rs"
# The binary is the MCP server, so it only builds with the `mcp` feature.
required-features = ["mcp"]

# Latency of the deterministic context compiler's `compile()` pipeline
# across fragment counts, budgets, and content shapes — see BENCHMARK.md.
[[bench]]
name = "context_compiler_benchmark"
harness = false
required-features = ["context"]

# Reproducible before/after benchmark of the deterministic context compiler.
# Offline and dependency-free — needs only the `context` feature.
[[example]]
name = "context_savings"
path = "examples/context_savings/main.rs"
required-features = ["context"]

# Real-data LoCoMo benchmark. Needs a local Ollama (all-minilm + a generative
# model), so it only builds with the `ollama` feature.
[[example]]
name = "locomo"
path = "examples/locomo/main.rs"
required-features = ["ollama"]

[lib]
name = "velesdb_memory"
path = "src/lib.rs"

[lints]
workspace = true

# Round-trips real MCP calls (initialize/remember/recall) plus a 20-way
# concurrency stress test over the streamable-HTTP transport built by the
# `http` feature (router only — no subprocess). Needs the dev-dependency
# rmcp client transport above, so it only builds under that feature.
[[test]]
name = "http_transport"
path = "tests/http_transport.rs"
required-features = ["http"]

# A second `--http` daemon against a store another process already holds
# must fail fast with the same actionable lock message as the stdio path
# (#1448) — proving the flock guard isn't a stdio-only regression risk.
[[test]]
name = "http_lock_contention"
path = "tests/http_lock_contention.rs"
required-features = ["http"]

# RED/GREEN proof that the HTTP transport's TLS termination is real, not a
# no-op: a client that does NOT trust the freshly-generated local CA must
# fail the handshake, and one that does must complete a full
# remember/recall round trip. See `src/tls.rs` for the CA/leaf generation
# this exercises.
[[test]]
name = "http_tls"
path = "tests/http_tls.rs"
required-features = ["http"]

# Process-level proof of the `--http-insecure` / `VELESDB_MEMORY_HTTP_INSECURE=1`
# escape hatch: spawns the actual compiled binary (not the in-process
# router) and confirms it serves plain HTTP, since that flag is parsed in
# `src/main.rs` before any router/TLS code runs.
[[test]]
name = "http_insecure_process"
path = "tests/http_insecure_process.rs"
required-features = ["http"]

[[example]]
name = "multihop"
path = "examples/multihop/main.rs"
required-features = ["ollama"]

[[example]]
name = "colfilter"
path = "examples/colfilter/main.rs"
required-features = ["ollama"]

[[example]]
name = "timeqa"
path = "examples/timeqa/main.rs"
required-features = ["ollama"]

[[example]]
name = "triengine"
path = "examples/triengine/main.rs"
required-features = ["ollama"]
