[package]
name = "velesdb-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["vector-database", "migration", "embeddings", "ai", "velesdb"]
categories = ["database", "command-line-utilities"]
authors.workspace = true
description = "Migration tool for importing vectors from other databases into VelesDB"

[[bin]]
name = "velesdb-migrate"
path = "src/main.rs"

[lib]
name = "velesdb_migrate"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP client for API-based sources
# Use native-tls to avoid ring 0.17.14 compilation issues on aarch64-apple-darwin
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }

# Native RESP client for Redis Stack / RediSearch
redis = { version = "0.26", features = ["tokio-comp", "aio"], optional = true }

# Config parsing
serde_yaml = "0.9"

# Progress bars
indicatif = "0.17"

# Interactive prompts (wizard mode)
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# Async utilities
async-trait = "0.1"

# UUID for point IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# URL parsing for SSRF-resistant validate_url
url = "2.5"

# VelesDB client (for destination)
velesdb-core = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.14"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "migration_benchmark"
harness = false

[features]
default = ["redis-source", "velesdb-core/default"]
redis-source = ["dep:redis"]
all-sources = ["redis-source"]
loom = ["velesdb-core/loom"]

# redis is optional behind "redis-source" feature flag — cargo-machete
# cannot detect it through the optional dependency.
[package.metadata.cargo-machete]
ignored = ["redis"]

[lints]
workspace = true
