[package]
name = "velesdb-python"
version = { workspace = true }
publish = false
edition = { workspace = true }
rust-version = { workspace = true }
license-file = "LICENSE"
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
authors = { workspace = true }
description = "Python bindings for VelesDB vector database"
keywords = ["vector-database", "python", "pyo3", "embeddings", "similarity-search"]
categories = ["database", "science"]

[lib]
name = "velesdb"
crate-type = ["cdylib"]

[dependencies]
velesdb-core = { workspace = true }
# The high-level memory wedge (MemoryService: remember/recall/relate/forget/why
# + remember_extracted). `default-features = false` drops the MCP server stack
# (rmcp/tokio-server); `ollama`+`extract` enable real embeddings and extraction.
velesdb-memory = { path = "../velesdb-memory", default-features = false, features = ["persistence", "ollama", "extract"] }
pyo3 = { version = "0.29", features = ["extension-module", "multiple-pymethods", "abi3-py39", "generate-import-lib"] }
serde_json = { workspace = true }
numpy = "0.29"
parking_lot = "0.12"
# Hosts the background streaming-ingestion drain task (Collection.enable_streaming).
# The Python process has no ambient Tokio runtime, so the bindings provide a
# shared multi-thread runtime for the StreamIngester to spawn its drain loop on.
tokio = { workspace = true }

[features]
default = ["velesdb-core/default"]
gpu = ["velesdb-core/gpu"]
update-check = ["velesdb-core/update-check"]
loom = ["velesdb-core/loom"]

[build-dependencies]
pyo3-build-config = "0.29"

[lints]
workspace = true
