[package]
name = "ecommerce_recommendation"
version = "0.1.0"
edition = "2021"
description = "E-commerce recommendation system showcasing VelesDB Vector + Graph + MultiColumn capabilities"
license = "MIT"

[dependencies]
velesdb-core = { path = "../../crates/velesdb-core" }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
