[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velesdb-python-common"
version = "0.1.0"
description = "Shared utilities for VelesDB Python integrations (security, ID generation, validation)"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
