[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velesdb-common"
version = "1.13.1"
description = "Shared utilities for VelesDB Python integrations (internal use)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VelesDB Team", email = "contact@wiscale.fr"}
]
requires-python = ">=3.9"
dependencies = [
    "velesdb>=1.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
