[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haystack-velesdb"
version = "4.0.0"
description = "Haystack 2.x DocumentStore for VelesDB: The Local AI Memory Database."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VelesDB Team", email = "contact@wiscale.fr"}
]
keywords = ["haystack", "velesdb", "vector-database", "embeddings", "rag", "local-first", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# requires-python aligned with the tested matrix. Python 3.9 was advertised
# previously but never actually exercised — the dedicated CI 'Haystack Real
# Integration' job runs on 3.11, and the latest haystack-ai (>=2.28) itself
# requires >=3.10. Setting the floor honestly so pip's resolver gives 3.10+
# users a coherent dep tree and 3.9 users a clear error instead of a stale
# haystack-ai silently resolving against missing API surface.
requires-python = ">=3.10"
dependencies = [
    "haystack-ai>=2.0.0",
    "velesdb>=3.8.0",
    "velesdb-common>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
]

[project.urls]
Homepage = "https://github.com/cyberlife-coder/VelesDB"
Documentation = "https://velesdb.com/docs/integrations/haystack"
Repository = "https://github.com/cyberlife-coder/VelesDB"

[tool.setuptools.packages.find]
where = ["src"]
